Added file tab functionality and styles / PasteBin API yet to implement

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 .App{
     height:100%;
-    width:100%;
+    width:calc(100% - 4px);
     padding:0;
     background-color: #363636;
+    display:grid;
+    grid-template-columns: 14rem auto;
+    gap:0.25rem;
+    /* border-bottom-color: black; */
 }
 
 body{
     margin:0;
     height:100%;
+    font-family: sans-serif;
 }
